dang phat trien tinh nang dang xuat

--- a/src/main/webapp/style/blog-list.css
+++ b/src/main/webapp/style/blog-list.css
@@ -1,6 +1,11 @@
 
-.main-logo {
-    margin-left:50px;
+.navbar-div-left {
+    padding-left: 50px;
+    width: 60%;
+}
+.navbar-div-right {
+    padding-right: 50px;
+    width: 35%;
 }
 
 .blog-container {
