--- a/src/main/webapp/style/blog-sidebar.css
+++ b/src/main/webapp/style/blog-sidebar.css
@@ -1,9 +1,13 @@
 
 .sidebar {
-    margin-top:80px;
     min-width: 250px;
     max-width: 250px;
     height: 100vh;
     background: #E9ECEF;
     color: #fff;
+}
+
+.sidebar ul li>a {
+    font-weight: bold;
+    color: darkslateblue;
 }
