--- a/src/main/webapp/style/blog-list.css
+++ b/src/main/webapp/style/blog-list.css
@@ -1,41 +1,62 @@
 
 .navbar {
     height: 80px;
+    background: #E9ECEF;
+    border-style: none none solid none;
+    border-width: 1px;
 }
-.navbar-div-left {
-    width: 60%;
-}
+
 
 .navbar-div-left .input-search {
     width: 400px;
     margin-inline: 20px;
 }
 
-.navbar-div-right {
-    margin-right: 80px;
-    width: 30%;
+nav.sidebar {
+    width: 250px;
+    top: 79px;
+    height: 100vh;
+    background: #E9ECEF;
+    color: #fff;
+    padding: 20px;
+    border-radius: 0;
+    border: 1px solid black;
+}
+.username {
+    font-size: 108%;
+    font-weight: bold;
+    color: darkslateblue;
+}
+.sidebar>ul li>a {
+    text-decoration: underline;
+    color: darkslateblue;
 }
 
 .div-middle{
     margin-top: 100px;
+    width: calc(90% - 250px );
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .blog-container {
-    border-radius: 8px;
+    width: 100%;
+    max-width: 860px;
+    border-radius: 6px;
+    background: #E9ECEF;
+    padding: 15px;
 }
 
-.container-username {
-    color: blue;
+.blog-container .blog-heading .author {
     font-weight: bold;
+    color: darkslateblue;
 }
 
-.button-new-blog {
-    width: 120px;
-}
-
-.navbar-div-right>div>ul li {
-    margin-inline: 10px;
-    align-self: center;
+.blog-title {
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 
@@ -44,4 +65,31 @@
     height: 60px;
     margin: 0;
     padding: 0;
+}
+
+@media only screen and (max-width: 600px) {
+    nav.sidebar {
+        width: 100px;
+    }
+    nav.sidebar .sidebar-heading {
+        flex-direction: column;
+    }
+
+    .div-middle {
+        margin-left: 100px;
+        width: calc(90% - 100px );
+    }
+}
+@media only screen and (max-width: 1380px) {
+    nav.sidebar {
+        width: 150px;
+    }
+    nav.sidebar .sidebar-heading {
+        flex-direction: column;
+    }
+
+    .div-middle {
+        margin-left: 150px;
+        width: calc(90% - 150px );
+    }
 }
