fix css trang blogs

--- a/src/main/webapp/style/blog-list.css
+++ b/src/main/webapp/style/blog-list.css
@@ -98,6 +98,11 @@
     right: 0;
 }
 
+.blog-container .blog-tittle {
+    margin-left: 15px;
+    font-weight: bold;
+    font-size: 90%;
+}
 .blog-container .btn-view-blog {
     font-size: 85%;
     position: absolute;
