sua giao dien jsp

--- a/src/main/webapp/style/search-page.css
+++ b/src/main/webapp/style/search-page.css
@@ -1,6 +1,8 @@
+
 .searchResult-container{
+    margin-bottom: 20px;
     box-sizing: content-box;
-    width: 80%;
+    width: 100%;
     min-width: 400px;
     max-width: 800px;
     padding: 15px;
