--- a/src/main/webapp/style/blog-list.css
+++ b/src/main/webapp/style/blog-list.css
@@ -1,4 +1,6 @@
-
+.form-inline{
+    border: none;
+}
 .navbar {
     height: 80px;
     background: #E9ECEF;
@@ -69,16 +71,20 @@
     padding-inline: 15px;
     padding-top: 15px;
     padding-bottom: 40px;
+    margin-bottom: 15px;
 }
 
-.blog-container .blog-heading .author {
+.blog-container h1, .blog-container h2, .blog-container h3 {
+    font-size: 1.35em;
+}
+
+ .author {
     font-weight: bold;
     color: darkslateblue;
 }
-
-.blog-title {
-    color: blue;
+.blog-container .blog-category {
     font-weight: bold;
+    color: #6f42c1;
     text-decoration: underline;
 }
 
@@ -99,9 +105,10 @@
 }
 
 .blog-container .blog-tittle {
-    margin-left: 15px;
+    color: blue;
     font-weight: bold;
-    font-size: 90%;
+    margin-left: 15px;
+    font-size: 120%;
 }
 .blog-container .btn-view-blog {
     font-size: 85%;
